--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@project-serum/anchor": "^0.26.0",
     "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
+    "circomlib": "^2.0.5",
+    "circomlibjs": "^0.1.7",
     "crypto": "^1.0.1",
+    "ethers": "^6.13.5",
+    "poseidon-lite": "^0.3.0",
     "prompt-sync": "^4.2.0",
     "snarkjs": "^0.7.5"
   }
